addons/app_test/deployment_test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-test
  labels:
    app: app-test
spec:
  replicas: 6
  selector:
    matchLabels:
      app: app-test
  template:
    metadata:
      labels:
        app: app-test
    spec:
      nodeSelector:
        workload: apps
      terminationGracePeriodSeconds: 10
      containers:
        - name: app-test
          image: nginxdemos/hello
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "1"
              memory: 1Gi
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - app-test
                topologyKey: topology.kubernetes.io/zone
