addons/app_test/ingress_test.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-test
  labels:
    app: app-test
spec:
  selector:
    app: app-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-test
                port:
                  number: 80
